assets/css/style.css
/* ... */
#match-live-card .match-info, .match-card-fw .match-info {
  flex-direction: column;
  align-items: flex-start;
}

.match-card.match-card-modify .match-card-top, .match-card.match-card-modify .match-card-middle, .match-card.match-card-modify .match-card-bottom {
  padding: 0.6rem 1rem;
}
.match-card.match-card-modify .match-card-bottom {
  align-items: start;
  gap: 5px;
}
.match-card.match-card-fw .match-card-top, .match-card.match-card-fw .match-card-middle, .match-card.match-card-fw .match-card-bottom {
  padding: 1rem;
}
.match-card-fw .match-card-middle {
  border-image: none;
}
.match-card-top, .match-card-middle, .match-card-bottom {
  z-index: 9;
}
.match-card-middle {
  flex: 0 0 6rem;
  justify-content: center;
  position: relative;
  border-bottom: 1px solid transparent;
  border-top: 1px solid transparent;
  border-image: linear-gradient(0.25turn, rgba(239, 65, 35, 0), rgba(239, 65, 35), rgba(239, 65, 35, 0));
  border-image-slice: 100%;
  border-image-slice: 1;
  padding: 10px 0;
  flex-direction: column;
}
.match-card-modify .match-card-middle__inner {
  padding: 0;
}
.match-card-middle__inner {
  align-items: center;
  padding: 0 0.5rem;
}

.justify-content-evenly {
  justify-content: space-evenly !important;
}

.match-card-modify .match-tm-info {
  gap: 5px;
  align-items: self-start;
}

.match-tm-info {
  display: flex;
  align-items: center;
}
.match-tm-info {
  display: flex;
  align-items: center;
}
.match-card-modify .match-tm-info .team-wrap {
  display: flex;
  align-items: center;
}

.match-card-fw .team-wrap {
  text-align: center;
}
.match-card.match-card-up.match-card-modify .match-tm-info .tm-name {
  font-size: 14px;
  line-height: 18px;
  width: calc(110px - 0px);
}
 
.match-card-fw .match-tm-info.teamLeft .tm-name {
  margin-left: 0;
}
 
.match-tm-info.teamLeft .tm-name {
  margin-right: 0;
}
 
.match-card-modify .match-tm-info.teamLeft .tm-name {
  text-align: right;
}
.match-tm-info.teamRight {
  flex-direction: row-reverse;
}
 

.match-tm-info {
  display: flex;
  align-items: center;
}
 
.match-card-modify .match-tm-info.teamRight .tm-name {
  text-align: left;
}
.match-card-fw .match-tm-info.teamRight .tm-name {
  text-align: center;
  margin-right: 0;
}
.match-tm-info.teamRight .tm-name {
  margin-left: 0;
  text-align: right;
}
.match-tm-info.teamRight .tm-name {
  margin-left: 0;
  text-align: right;
}
@media (min-width: 641px) {
  .tm-code {
      display: none;
  }
}
.tm-name {
  width: calc(110px - 0px);
  font-size: 14px;
  line-height: 16px;
  font-weight: 700;
  margin: 0 10px;
}
.match-card.match-card-up.match-card-modify .match-coutnry-img {
  width: 65px;
  height: 65px;
}
.match-card-modify .match-tm-info .match-coutnry-img {
  margin: 0 5px;
  width: 75px;
  height: 75px;
}
.match-card-fw .match-coutnry-img {
  margin: 0 auto;
  margin-bottom: 5px;
  display: flex;
  align-items: center;
  justify-content: center;
  box-shadow: none;
}
.match-coutnry-img {
  overflow: hidden;
  width: 60px;
  height: 60px;
  background: #FFFFFF;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
  border-radius: 50%;
}

.match-coutnry-img {
  width: 55px;
  height: 55px;
  background: #FFFFFF;
  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
  border-radius: 50%;
}
.match-card.match-card-up.match-card-modify .match-coutnry-img img {
  width: 40px;
}

.match-card-modify .match-tm-info .match-coutnry-img img {
  width: 43px;
}
.match-card.match-card-modify .small-seprator {
  background-image: url(https://digicrick.github.io/crickdigi/images/slash.png);
  background-size: 24px;
  width:128px;
  height: 128px;
  padding: 0 18px;
}
.match-card-fw .match-card-middle .small-seprator {
  position: static;
}
.match-card-fw .small-seprator {
  background-image: url(https://digicrick.github.io/crickdigi/images/slash.png);
  background-repeat: no-repeat;
  background-position: center;
  background-size: 40px;
  width:128px;
  height: 128px;
}
.small-seprator {
  position: absolute;
  left: 0;
  right: 0;
  text-align: center;
  justify-content: center;
  top: 36px;
  font-size: 14px;
}
.match-card.match-card-modify .match-card-top .match-tournament-name {
  line-height: 16px;
}
.match-card-fw .match-card-top .match-tournament-name {
  font-size: 11px;
  color: #000;
  font-style: normal; 
  font-weight: 600;
}
.match-card-fw.match-card-up.match-card-modify .match-card-bottom .match-card-btn {
  background-color: #ff9103;
}
.match-card.match-card-modify .match-card-bottom .match-card-btn {
  font-size: 12px;
  background-position: 100px center;
  padding:5px 5px 5px 10px;;
  border-radius: 16px;
}
.event-card{
  background: linear-gradient(to right bottom, #fff 52%, #F0F9FB 48%);

}
.diagonal-shape1{
  position: absolute;
  left: 0;
  bottom: 0;
  /* z-index: -1; */
  opacity: .1;
}

@media (max-width: 900px) {
  .event-card .d-flex.flex-row.flex-wrap {
    justify-content: flex-start;
  }
  .event-card .d-flex.flex-row.flex-wrap .ms-3 {
    margin-left: 0 !important;
  }
}

/* .event-card:hover{
  background: linear-gradient(to right bottom, #fff 52%, #133F7E 48%);
  transition: .5s;
} */

